[gd_scene load_steps=12 format=3 uid="uid://b60aacyagkp18"]

[ext_resource type="Texture2D" uid="uid://dkhoq6u6gpeug" path="res://Art/Inventory_Art/NuxButton.png" id="1_7k1i1"]
[ext_resource type="Texture2D" uid="uid://bpmuiwevfwrn5" path="res://Art/New_Assets/Axe.png" id="1_8e31i"]
[ext_resource type="Script" path="res://NuxMode/NuxModeButton.gd" id="1_hbpal"]
[ext_resource type="Texture2D" uid="uid://xxbdo0vmh0ge" path="res://Art/Nux_Icons/KeyBush.png" id="2_8ln1j"]
[ext_resource type="Texture2D" uid="uid://jj48eba8og4w" path="res://Art/Nux_Icons/Lud.png" id="4_r3p17"]
[ext_resource type="Texture2D" uid="uid://ctgxyujin7mac" path="res://Art/New_Assets/Claw.png" id="5_owk5o"]
[ext_resource type="Texture2D" uid="uid://c20ll6kuoeoql" path="res://Art/Nux_Icons/Screenshot 2024-09-28 at 6.41.57 PM.png" id="6_i478y"]
[ext_resource type="Texture2D" uid="uid://deo2vejwb50gq" path="res://Art/Nux_Icons/Screenshot 2024-09-28 at 6.41.05 PM.png" id="7_5lo5w"]
[ext_resource type="Texture2D" uid="uid://2ynamw7n3572" path="res://Art/Nux_Icons/Key.png" id="9_5pphh"]
[ext_resource type="Texture2D" uid="uid://h1ph6ot8lg46" path="res://Art/Images/puzzle piece 1.png" id="9_u60qn"]
[ext_resource type="Texture2D" uid="uid://o7h8nc0fsmvr" path="res://Art/Nux_Icons/Door.png" id="10_3e5bd"]

[node name="NuxModeButton" type="Node2D"]
script = ExtResource("1_hbpal")

[node name="OptionButton" type="OptionButton" parent="."]
offset_right = 151.0
offset_bottom = 66.0
item_count = 11
popup/item_0/text = "Bush"
popup/item_0/icon = ExtResource("2_8ln1j")
popup/item_0/id = 1
popup/item_1/text = "Claw"
popup/item_1/icon = ExtResource("5_owk5o")
popup/item_1/id = 2
popup/item_2/text = "Lud"
popup/item_2/icon = ExtResource("4_r3p17")
popup/item_2/id = 3
popup/item_3/text = "Chest 1"
popup/item_3/icon = ExtResource("6_i478y")
popup/item_3/id = 4
popup/item_4/text = "Chest 2"
popup/item_4/icon = ExtResource("7_5lo5w")
popup/item_4/id = 5
popup/item_5/text = "Axe"
popup/item_5/icon = ExtResource("1_8e31i")
popup/item_5/id = 6
popup/item_6/text = "Chest 3"
popup/item_6/icon = ExtResource("6_i478y")
popup/item_6/id = 7
popup/item_7/text = "Puzzle"
popup/item_7/icon = ExtResource("9_u60qn")
popup/item_7/id = 8
popup/item_8/text = "Key"
popup/item_8/icon = ExtResource("9_5pphh")
popup/item_8/id = 9
popup/item_9/text = "Door 2"
popup/item_9/icon = ExtResource("10_3e5bd")
popup/item_9/id = 10
popup/item_10/text = "Clear Text"
popup/item_10/id = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(66, 32.9726)
scale = Vector2(0.485294, 0.241959)
texture = ExtResource("1_7k1i1")

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -270.993
offset_top = -67.6916
offset_right = 270.007
offset_bottom = 69.3084
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "NUX Mode"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 159.0
offset_top = 1.0
offset_right = 461.0
offset_bottom = 80.0
color = Color(0.290196, 0.290196, 0.290196, 0.619608)

[node name="Answer_Box" type="Label" parent="."]
offset_left = 161.0
offset_right = 459.0
offset_bottom = 78.0
text = "Click on any icon to see the answer!"
autowrap_mode = 3

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="OptionButton" to="." method="_on_option_button_pressed"]
